--- a/index.html
+++ b/index.html
@@ -39,5 +39,13 @@
     </div>
   </div>
   <!-- End Header -->
+
+  <!-- Start Landing Section -->
+  <div class="landing">
+    <div class="intro-text"></div>
+    <h1></h1>
+  </div>
+  <!-- End Landing Section -->
+
 </body>
 </html>
