Complete Landing Page

--- a/index.html
+++ b/index.html
@@ -42,8 +42,11 @@
 
   <!-- Start Landing Section -->
   <div class="landing">
-    <div class="intro-text"></div>
-    <h1></h1>
+    <div class="intro-text">
+    <h1>Hello There</h1>
+    <p>We are MansTKD - Super Creative & Minimal Sports Academy </p>
+    </div>
+    
   </div>
   <!-- End Landing Section -->
 
