Features is End

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!-- Render All Elements Normaly (Normalize) -->
     <link rel="stylesheet" href="./css/normalize.css">
     <!-- Font Awsome -->
-    <!-- <link rel="stylesheet" href="./css/all.min.css"> -->
+    <link rel="stylesheet" href="./css/all.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css">
     <!-- Google Fonts -->
     <link rel="stylesheet" href="<link rel="preconnect" href="https://fonts.googleapis.com">
@@ -49,6 +49,29 @@
     
   </div>
   <!-- End Landing Section -->
+
+  <!-- Start Features -->
+  <div class="features">
+    <div class="container">
+      <div class="feat">
+        <i class="fas fa-graduation-cap"></i>
+        <h3>Tell Us Your Idea</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. sed do eiusmod tempor incidunt ut lab</p>
+      </div>
+      <div class="feat">
+        <i class="fa-solid fa-flask-vial"></i>
+        <h3>We Will Do All The Work</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. sed do eiusmod tempor incidunt ut lab</p>
+      </div>
+      <div class="feat">
+        <i class="fas fa-globe-europe"></i>
+        <h3>Your Product is Worldwide</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. sed do eiusmod tempor incidunt ut lab</p>
+      </div>
+    </div>
+  </div>
+
+  <!-- End Features -->
 
 </body>
 </html>
