--- a/index.html
+++ b/index.html
@@ -1,41 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Elzero Template 01</title>
-    <!-- Main Template CSS File -->
-    <link rel="stylesheet" href="./css/style.css">
-    <!-- Render All Elements Normaly (Normalize) -->
-    <link rel="stylesheet" href="./css/normalize.css">
-    <!-- Font Awsome -->
-    <link rel="stylesheet" href="./css/all.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css">
-    <!-- Google Fonts -->
-    <link rel="stylesheet" href="<link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Noto+Serif:wght@700&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Work+Sans:wght@200;300;400;500;600;700;800&display=swap" rel="stylesheet">
-    
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Elzero Template 01</title>
+  <!-- Main Template CSS File -->
+  <link rel="stylesheet" href="./css/style.css">
+  <!-- Render All Elements Normaly (Normalize) -->
+  <link rel="stylesheet" href="./css/normalize.css">
+  <!-- Font Awsome -->
+  <link rel="stylesheet" href="./css/all.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css">
+  <!-- Google Fonts -->
+  <link rel="stylesheet" href="<link rel=" preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Noto+Serif:wght@700&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Work+Sans:wght@200;300;400;500;600;700;800&display=swap"
+    rel="stylesheet">
+
 </head>
+
 <body>
   <!--Start Header -->
   <div class="header">
     <div class="container">
-        <img class="logo" src="./image/logo3-1.png" alt="" />
-        <div class="links">
-            <span class="icon">
-                <span></span>
-                <span></span>
-                <span></span>
-            </span>
-            <ul>
-               <li><a href="#services">Services</a></li>
-               <li><a href="#portfolio">Portfolio</a></li>
-               <li><a href="#about">About</a></li>
-               <li><a href="#contact">Contact</a></li>
-            </ul>
-        </div>
+      <img class="logo" src="./image/logo3-1.png" alt="" />
+      <div class="links">
+        <span class="icon">
+          <span></span>
+          <span></span>
+          <span></span>
+        </span>
+        <ul>
+          <li><a href="#services">Services</a></li>
+          <li><a href="#portfolio">Portfolio</a></li>
+          <li><a href="#about">About</a></li>
+          <li><a href="#contact">Contact</a></li>
+        </ul>
+      </div>
     </div>
   </div>
   <!-- End Header -->
@@ -43,10 +47,10 @@
   <!-- Start Landing Section -->
   <div class="landing">
     <div class="intro-text">
-    <h1>Hello There</h1>
-    <p>We are MansTKD - Super Creative & Minimal Sports Academy </p>
+      <h1>Hello There</h1>
+      <p>We are MansTKD - Super Creative & Minimal Sports Academy </p>
     </div>
-    
+
   </div>
   <!-- End Landing Section -->
 
@@ -73,5 +77,60 @@
 
   <!-- End Features -->
 
+  <!-- Start Services -->
+  <div class="services">
+    <div class="container">
+      <h2 class="special-heading">Services</h2>
+      <p>Don`t be busy, be productive </p>
+      <div class="services-content">
+        <div class="col">
+          <!-- Start Service -->
+          <div class="srv">
+            <i class="fa-sharp fa-solid fa-palette"></i>
+            <div class="text">
+              <h3>Graphic Design</h3>
+              <p>A web designer works on the appearance, layout, and, in some cases, content of a website. Appearance,
+                for instance, relates to the colors, font, and images.</p>
+            </div>
+          </div>
+          <div class="srv">
+            <i class="fa-regular fa-object-group"></i>
+            <div class="text">
+              <h3>UI & UX</h3>
+              <p>User Interface (UI) and User Experience (UX) Design play key roles in the experience users have when
+                interacting with digital products and applications.</p>
+            </div>
+          </div>
+          <!-- End Service -->
+        </div>
+        <div class="col">
+          <!-- Start Service -->
+          <div class="srv">
+            <i class="fa-solid fa-pen-ruler"></i>
+            <div class="text">
+              <h3>Web Design</h3>
+              <p>Web design refers to the design of websites that are displayed on the internet. It usually refers to the user experience aspects of website development .</p>
+            </div>
+          </div>
+          <div class="srv">
+            <i class="fa-solid fa-laptop-code"></i>
+            <div class="text">
+              <h3>Web Development</h3>
+              <p>A web developer’s job is to create websites. While their primary role is to ensure the website is visually appealing and easy to navigate. </p>
+            </div>
+          </div>
+          <!-- End Service -->
+        </div>
+        <div class="col">
+          <div class="image image-column">
+            <img class="image" src="./image/OIP.jpg" alt="" />
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <!-- End Services -->
+
 </body>
+
 </html>
