portfolio is Done

--- a/index.html
+++ b/index.html
@@ -131,6 +131,60 @@
   </div>
   <!-- End Services -->
 
+  <!-- Start Portfolio -->
+  <div class="portfolio">
+    <div class="container">
+      <h2 class="special-heading">Services</h2>
+      <p>Don`t be busy, be productive </p>
+      <div class="portfolio-content">
+        <div class="col">
+          <!-- Start Service -->
+          <div class="srv">
+            <i class="fa-sharp fa-solid fa-palette"></i>
+            <div class="text">
+              <h3>Graphic Design</h3>
+              <p>A web designer works on the appearance, layout, and, in some cases, content of a website. Appearance,
+                for instance, relates to the colors, font, and images.</p>
+            </div>
+          </div>
+          <div class="srv">
+            <i class="fa-regular fa-object-group"></i>
+            <div class="text">
+              <h3>UI & UX</h3>
+              <p>User Interface (UI) and User Experience (UX) Design play key roles in the experience users have when
+                interacting with digital products and applications.</p>
+            </div>
+          </div>
+          <!-- End Service -->
+        </div>
+        <div class="col">
+          <!-- Start Service -->
+          <div class="srv">
+            <i class="fa-solid fa-pen-ruler"></i>
+            <div class="text">
+              <h3>Web Design</h3>
+              <p>Web design refers to the design of websites that are displayed on the internet. It usually refers to the user experience aspects of website development .</p>
+            </div>
+          </div>
+          <div class="srv">
+            <i class="fa-solid fa-laptop-code"></i>
+            <div class="text">
+              <h3>Web Development</h3>
+              <p>A web developer’s job is to create websites. While their primary role is to ensure the website is visually appealing and easy to navigate. </p>
+            </div>
+          </div>
+          <!-- End Service -->
+        </div>
+        <div class="col">
+          <div class="image image-column">
+            <img class="image" src="./image/OIP.jpg" alt="" />
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <!-- End Portfolio -->
+  
 </body>
 
 </html>
