--- a/index.html
+++ b/index.html
@@ -130,56 +130,34 @@
     </div>
   </div>
   <!-- End Services -->
-
+  
   <!-- Start Portfolio -->
   <div class="portfolio">
     <div class="container">
-      <h2 class="special-heading">Services</h2>
-      <p>Don`t be busy, be productive </p>
+      <h2 class="special-heading">Portfolio</h2>
+      <p>If you do it right , it will last forever.</p>
       <div class="portfolio-content">
-        <div class="col">
-          <!-- Start Service -->
-          <div class="srv">
-            <i class="fa-sharp fa-solid fa-palette"></i>
-            <div class="text">
-              <h3>Graphic Design</h3>
-              <p>A web designer works on the appearance, layout, and, in some cases, content of a website. Appearance,
-                for instance, relates to the colors, font, and images.</p>
-            </div>
-          </div>
-          <div class="srv">
-            <i class="fa-regular fa-object-group"></i>
-            <div class="text">
-              <h3>UI & UX</h3>
-              <p>User Interface (UI) and User Experience (UX) Design play key roles in the experience users have when
-                interacting with digital products and applications.</p>
-            </div>
-          </div>
-          <!-- End Service -->
+       <div class="card">
+        <img src="./image/portfolio 1.jpg" alt="">
+        <div class="info">
+          <h3>Project Here</h3>
+          <p>My creative ability is very difficult to measure because it can manifest in so many suprising and.</p>
         </div>
-        <div class="col">
-          <!-- Start Service -->
-          <div class="srv">
-            <i class="fa-solid fa-pen-ruler"></i>
-            <div class="text">
-              <h3>Web Design</h3>
-              <p>Web design refers to the design of websites that are displayed on the internet. It usually refers to the user experience aspects of website development .</p>
-            </div>
-          </div>
-          <div class="srv">
-            <i class="fa-solid fa-laptop-code"></i>
-            <div class="text">
-              <h3>Web Development</h3>
-              <p>A web developer’s job is to create websites. While their primary role is to ensure the website is visually appealing and easy to navigate. </p>
-            </div>
-          </div>
-          <!-- End Service -->
+       </div>
+       <div class="card">
+        <img src="./image/portfolio 2.jpg" alt="">
+        <div class="info">
+          <h3>Project Here</h3>
+          <p>My creative ability is very difficult to measure because it can manifest in so many suprising and.</p>
         </div>
-        <div class="col">
-          <div class="image image-column">
-            <img class="image" src="./image/OIP.jpg" alt="" />
-          </div>
+       </div>
+       <div class="card">
+        <img src="./image/portfolio 3.jpg" alt="">
+        <div class="info">
+          <h3>Project Here</h3>
+          <p>My creative ability is very difficult to measure because it can manifest in so many suprising and.</p>
         </div>
+       </div>
       </div>
     </div>
   </div>
