--- a/index.html
+++ b/index.html
@@ -162,7 +162,26 @@
     </div>
   </div>
   <!-- End Portfolio -->
-  
+
+    <!-- Start About -->
+    <div class="about">
+      <div class="container">
+        <h2 class="special-heading">About</h2>
+        <p>Less is more work</p>
+        <div class="about-content">
+       <div class="image">
+        <img src="./image/about.jpg" alt="">
+       </div>
+       <div class="text">
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Repellat sequi reprehenderit earum veritatis atque odit accusantium, aspernatur eveniet unde tempora mollitia, iure nisi voluptate debitis nesciunt nam commodi aliquid voluptatem!</p>
+        <hr>
+       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum sed ullam, libero, ipsum magnam at nulla recusandae quam porro molestiae illum nisi enim ducimus laudantium, ratione nihil eius. Delectus, culpa!
+       </p>
+       </div>
+        </div>
+      </div>
+    </div>
+    <!-- End About -->
 </body>
 
 </html>
