leon Project 95% Done

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
   <!-- End Features -->
 
   <!-- Start Services -->
-  <div class="services">
+  <div class="services" id="services">
     <div class="container">
       <h2 class="special-heading">Services</h2>
       <p>Don`t be busy, be productive </p>
@@ -132,7 +132,7 @@
   <!-- End Services -->
   
   <!-- Start Portfolio -->
-  <div class="portfolio">
+  <div class="portfolio" id="portfolio">
     <div class="container">
       <h2 class="special-heading">Portfolio</h2>
       <p>If you do it right , it will last forever.</p>
@@ -164,7 +164,7 @@
   <!-- End Portfolio -->
 
     <!-- Start About -->
-    <div class="about">
+    <div class="about" id="about">
       <div class="container">
         <h2 class="special-heading">About</h2>
         <p>Less is more work</p>
@@ -182,6 +182,38 @@
       </div>
     </div>
     <!-- End About -->
+
+    <!-- Start Contact -->
+    <div class="contact" id="contact">
+      <div class="container">
+        <h2 class="special-heading">Contact</h2>
+        <p>We are born to creat</p>
+        <div class="info">
+          <p class="label">Feel free to drop us a line at:</p>
+          <a href="mailto:leonagency@gmail.com?subject=Contact" class="link">leonagency@mail.com</a>
+          <div class="social">
+            Find Us On Social Networks
+            <a href="https://www.linkedin.com/in/mansoor-hamidi" target="_blank"><i class="fa-brands fa-linkedin"></i></i></a>
+
+              <a href="https://www.youtube.com/c/manstkd" target="_blank"><i class="fa-brands fa-youtube"></i></a>
+      
+              <a href="https://www.instagram.com/master.mansour.tkd" target="_blank"><i
+                class="fab fa-instagram"></i></a>
+
+            <!-- <i class="fab fa-youtube"></i>
+            <i class="fab fa-facebook-f"></i>
+            <i class="fab fa-twitter"></i> -->
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- End Contact -->
+
+    <!-- Start Footer -->
+    <div class="footer">
+      &copy; 2021 <span>Leon</span> All Right Reserved
+    </div>
+    <!-- End Footer -->
 </body>
 
 </html>
